Input List - Only New Element Updated

--- a/JavaScript Tutorials/input_list1.html
+++ b/JavaScript Tutorials/input_list1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Alert Window</title>
+    <title>Input List - Only New Element Updated</title>
 </head>
 <body>
     <input id='inpt' type='text'><button id='btn'>Enter</button>
